Fix Database Issue; Style Order Success Page; I ran into a little error where due to the server and my local machine assigning different invoice numbers, paypal got confused, and would not allow the new purchase due to overlapping incvoice ids. I made more notes about this in the README (just below where this post will be). But, since then, I've styled the Order Confirmation page. I'm going to push this up, and move on from there. I had also began looking into setting up the email, but the paypal thing turned out to be a much larger issue. I think I will put off the email thing til a later time, and I will come back to the reset password page at that time. For now, i want to just move forward with wrapping up the rest of these account pages. And I want to __keep a VERY CLOSE eye__ on the database, and make sure this system works correctly. I did not take into account the paypal factor before, but have come up with a method, and it is noted in the README. Post commit message to README.
Former-commit-id: bfe363063760fa03c59590813158ae84cd363e41

--- a/skin/frontend/default/rofcustom/css/cart-checkout.css
+++ b/skin/frontend/default/rofcustom/css/cart-checkout.css
@@ -1369,4 +1369,10 @@ img, button, input {
         min-height: 320px;
     }
 
-
+    /* Order Success Confirmation page
+    ***************************************************************************/
+    #order-success-button {
+        width: 130px;
+        height: 40px;
+        background-image: url('../images/cart-continue-btn.png');
+    }
